fix: css/html according to rule 3.1 in html-and-css.md

--- a/style.css
+++ b/style.css
@@ -5,6 +5,12 @@ body {
   font-family: Lato, sans-serif;
 }
 
+.wrapper {
+  display: block;
+  width: 500px;
+  margin: 0 auto 0;
+}
+
 .main {
   width: 500px;
   margin: 0 auto;
@@ -17,7 +23,7 @@ body {
 }
 
 .main__info {
-  font-family: 'Lato', sans-serif;
+  font-family: fantasy, cursive;
 }
 
 @media (max-width:768px) {
@@ -26,36 +32,32 @@ body {
   }
 }
 
-.centered-main-page-element {
-  display: block;
-  width: 500px;
-  margin: 0 auto 0;
-}
 
-.task {
+
+.task__row-new,.list__label,.list__input {
   width: 56%;
   display: inline-block;
   flex-grow: 1
 }
 
-.task-row-wrapper {
+.task__row {
   display: flex;
 }
 
-ul {
+.list {
   margin: 0;
   padding: 0px;
 }
 
-li, h3 {
+.list__fill,.title {
   list-style: none;
 }
 
-input, button {
+.task__row-new,.list__input, .btn {
   outline: none;
 }
 
-button {
+.btn {
   background: none;
   border: 0px;
   color: #888;
@@ -65,13 +67,12 @@ button {
   cursor: pointer;
 }
 
-button:hover {
+.btn:hover {
   color: #3a3A3a;
 }
 
 /* Heading */
-h3,
-label[for='new-task'] {
+.title {
   color: #333;
   font-weight: 700;
   font-size: 15px;
@@ -81,7 +82,7 @@ label[for='new-task'] {
   text-transform: uppercase;
 }
 
-input[type="text"] {
+.task__row-new,.list__input{
   margin: 0;
   font-size: 18px;
   line-height: 18px;
@@ -94,22 +95,22 @@ input[type="text"] {
   color: #888;
 }
 
-input[type="text"]:focus {
+.list__input:focus {
   color: #333;
 }
 
 /* New Task */
-label[for='new-task'] {
+.label__task-new {
   display: block;
   margin: 0 0 20px;
 }
 
-input#new-task {
+.task__row-new {
   width: 318px;
 }
 
 /* Task list */
-li {
+.list__fill {
   overflow: hidden;
   padding: 20px 0;
   border-bottom: 1px solid #eee;
@@ -119,50 +120,50 @@ li {
   align-items: center;
 }
 
-li>* {
-  vertical-align: middle;
+.list__fill {
+  vertical-align:middle;
 }
 
-li>input[type="checkbox"] {
+.checkbox {
   margin: 0 10px;
 }
 
-li>label {
+.list__label {
   padding-left: 10px;
   box-sizing: border-box;
   font-size: 18px;
   width: 226px;
 }
 
-li>input[type="text"] {
+.list__input {
   width: 226px
 }
 
-button.delete img {
+.list__image {
   height: 2em;
   transform: rotateZ(45deg);
   transition: transform 200ms ease-in;
 }
 
-button.delete img:hover {
+.list__image:hover {
   transform: rotateZ(0);
 }
 
 /* Completed */
-ul#completed-tasks label {
+.list__label-complete {
   text-decoration: line-through color: #888;
 }
 
 /* Edit Task */
-ul li input[type=text] {
+.list__input{
   display: none
 }
 
-ul li.editMode input[type=text] {
+.list__fill-edit .list__input {
   display: inline-block;
   width: 224px
 }
 
-ul li.editMode label {
+.list__fill-edit .list__label {
   display: none;
 }
