--- a/style.css
+++ b/style.css
@@ -143,7 +143,7 @@ body {
 }
 
 .list__input {
-  width: 226px
+  width: 226px;
 }
 
 .list__image {
@@ -158,17 +158,18 @@ body {
 
 /* Completed */
 .list__label-complete {
-  text-decoration: line-through color: #888;
+  text-decoration: line-through;
+  color: #888;
 }
 
 /* Edit Task */
 .list__input {
-  display: none
+  display: none;
 }
 
 .list__fill-edit .list__input {
   display: inline-block;
-  width: 224px
+  width: 224px;
 }
 
 .list__fill-edit .list__label {
