--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   background-color: #f8f8f8;
   color: #333;
-  font-family: Lato, sans-serif;
+  font-family: 'Lato', sans-serif;
 }
 
 .wrapper {
@@ -55,20 +55,20 @@ body {
   line-height: 18px;
   height: 21px;
   padding: 0 9px;
-  border: 1px solid #dDd;
-  background: #FFF;
+  border: 1px solid #dddddd;
+  background: #ffffff;
   border-radius: 6px;
-  font-family: Lato, sans-serif;
-  color: #888;
+  font-family: 'Lato', sans-serif;
+  color: #888888;
 }
 
 .btn {
   background: none;
   border: 0px;
-  color: #888;
+  color: #888888;
   font-size: 15px;
   width: 60px;
-  font-family: Lato, sans-serif;
+  font-family: 'Lato', sans-serif;
   cursor: pointer;
 }
 
@@ -78,10 +78,10 @@ body {
 
 /* Heading */
 .title {
-  color: #333;
+  color: #333333;
   font-weight: 700;
   font-size: 15px;
-  border-bottom: 2px solid #333;
+  border-bottom: 2px solid #333333;
   padding: 30px 0 10px;
   margin: 0;
   text-transform: uppercase;
@@ -111,7 +111,7 @@ body {
 }
 
 .list__input:focus {
-  color: #333;
+  color: #333333;
 }
 
 
@@ -120,7 +120,7 @@ body {
 .list__fill {
   overflow: hidden;
   padding: 20px 0;
-  border-bottom: 1px solid #eee;
+  border-bottom: 1px solid #eeeeee;
 
   display: flex;
   justify-content: space-between;
@@ -159,7 +159,7 @@ body {
 /* Completed */
 .list__label-complete {
   text-decoration: line-through;
-  color: #888;
+  color: #888888;
 }
 
 /* Edit Task */
