--- a/style.css
+++ b/style.css
@@ -36,7 +36,9 @@ body {
   display: flex;
 }
 
-.task__row-new, .list__label, .list__input {
+.task__row-new,
+.list__label,
+.list__input {
   width: 56%;
   display: inline-block;
   flex-grow: 1
