--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   background-color: #f8f8f8;
   color: #333;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 .wrapper {
@@ -68,7 +68,7 @@ body {
   border: 1px solid #dddddd;
   background: #ffffff;
   border-radius: 6px;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   color: #888888;
 }
 
@@ -78,7 +78,7 @@ body {
   color: #888888;
   font-size: 15px;
   width: 60px;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
   cursor: pointer;
 }
 
